[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Tree.gd" type="Script" id=1]
[ext_resource path="res://scripts/MainLogic.gd" type="Script" id=2]
[ext_resource path="res://scripts/Category_ItemList.gd" type="Script" id=3]
[ext_resource path="res://scripts/selectionDesc_TextEdit.gd" type="Script" id=4]
[ext_resource path="res://scripts/Rels_ItemList.gd" type="Script" id=5]
[ext_resource path="res://scripts/SaveDialog.gd" type="Script" id=6]

[node name="GUI" type="MarginContainer" groups=[
"save",
]]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree_VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 338.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="creation_HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Tree_VBoxContainer"]
margin_right = 338.0
margin_bottom = 24.0

[node name="itemName_LineEdit" type="LineEdit" parent="HBoxContainer/Tree_VBoxContainer/creation_HBoxContainer"]
margin_right = 246.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Name of Item"
placeholder_alpha = 0.5
caret_blink = true

[node name="createItem_Button" type="Button" parent="HBoxContainer/Tree_VBoxContainer/creation_HBoxContainer"]
margin_left = 250.0
margin_right = 338.0
margin_bottom = 24.0
text = "Create Item"

[node name="Label" type="Label" parent="HBoxContainer/Tree_VBoxContainer"]
visible = false
margin_top = 34.0
margin_right = 338.0
margin_bottom = 48.0
text = "Double Click To Create Relationship"
align = 1
valign = 1

[node name="Tree" type="Tree" parent="HBoxContainer/Tree_VBoxContainer"]
margin_top = 34.0
margin_right = 338.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
allow_rmb_select = true
hide_root = true
script = ExtResource( 1 )

[node name="Information_VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Information_VBoxContainer"]
margin_right = 339.0
margin_bottom = 20.0
alignment = 1

[node name="save_Button" type="Button" parent="HBoxContainer/Information_VBoxContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 167.0
margin_bottom = 20.0
text = "      Save      "

[node name="load_Button" type="Button" parent="HBoxContainer/Information_VBoxContainer/HBoxContainer"]
margin_left = 171.0
margin_right = 261.0
margin_bottom = 20.0
text = "      Load      "

[node name="selectionDesc_Label" type="Label" parent="HBoxContainer/Information_VBoxContainer"]
margin_top = 30.0
margin_right = 339.0
margin_bottom = 44.0
text = "Selection Description"
align = 1
valign = 1

[node name="selectionDesc_TextEdit" type="TextEdit" parent="HBoxContainer/Information_VBoxContainer"]
margin_top = 54.0
margin_right = 339.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
script = ExtResource( 4 )

[node name="Rels_VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Rels_VBoxContainer"]
margin_right = 339.0
margin_bottom = 24.0

[node name="category_LineEdit" type="LineEdit" parent="HBoxContainer/Rels_VBoxContainer/HBoxContainer"]
margin_right = 223.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Name of Category"
placeholder_alpha = 0.5

[node name="createCategory_Button" type="Button" parent="HBoxContainer/Rels_VBoxContainer/HBoxContainer"]
margin_left = 227.0
margin_right = 339.0
margin_bottom = 24.0
text = "Create Category"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Rels_VBoxContainer"]
margin_top = 28.0
margin_right = 339.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Rels_VBoxContainer/HBoxContainer2"]
margin_right = 167.0
margin_bottom = 562.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 167.0
margin_bottom = 14.0
text = "Categories"
align = 1
valign = 1

[node name="Category_ItemList" type="ItemList" parent="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 14.0
margin_right = 167.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/Rels_VBoxContainer/HBoxContainer2"]
margin_left = 171.0
margin_right = 339.0
margin_bottom = 562.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Label2" type="Label" parent="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 168.0
margin_bottom = 14.0
text = "Relationships"
align = 1
valign = 1

[node name="Rels_ItemList" type="ItemList" parent="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 14.0
margin_right = 168.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDialog" type="FileDialog" parent="."]
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 600.0
resizable = true
access = 1
current_dir = "user://"
current_path = "user://"
script = ExtResource( 6 )

[node name="loadDialog" type="FileDialog" parent="."]
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 600.0
window_title = "Open a File"
resizable = true
mode = 0
access = 1
current_dir = "user://"
current_path = "user://"
script = ExtResource( 6 )
[connection signal="categoryMode" from="." to="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer/Category_ItemList" method="_on_GUI_categoryMode"]
[connection signal="categoryMode" from="." to="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2/Rels_ItemList" method="_on_GUI_categoryMode"]
[connection signal="changeTree" from="." to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_GUI_changeTree"]
[connection signal="createCategory" from="." to="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer/Category_ItemList" method="_on_GUI_createCategory"]
[connection signal="createChild" from="." to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_GUI_createChild"]
[connection signal="updateInfo" from="." to="HBoxContainer/Information_VBoxContainer/selectionDesc_TextEdit" method="_on_GUI_updateInfo"]
[connection signal="updateInfo" from="." to="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer/Category_ItemList" method="_on_GUI_updateInfo"]
[connection signal="updateInfo" from="." to="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2/Rels_ItemList" method="_on_GUI_updateInfo"]
[connection signal="updateSelectionDesc" from="." to="HBoxContainer/Information_VBoxContainer/selectionDesc_TextEdit" method="_on_GUI_updateSelectionDesc"]
[connection signal="updateTree" from="." to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_GUI_updateTree"]
[connection signal="text_changed" from="HBoxContainer/Tree_VBoxContainer/creation_HBoxContainer/itemName_LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="HBoxContainer/Tree_VBoxContainer/creation_HBoxContainer/itemName_LineEdit" to="." method="_on_itemName_LineEdit_text_entered"]
[connection signal="pressed" from="HBoxContainer/Tree_VBoxContainer/creation_HBoxContainer/createItem_Button" to="." method="_on_Button_pressed"]
[connection signal="childCreated" from="HBoxContainer/Tree_VBoxContainer/Tree" to="." method="_on_Tree_childCreated"]
[connection signal="deleteItem" from="HBoxContainer/Tree_VBoxContainer/Tree" to="." method="_on_Tree_deleteItem"]
[connection signal="doubleClicked" from="HBoxContainer/Tree_VBoxContainer/Tree" to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_Tree_doubleClicked"]
[connection signal="itemEdited" from="HBoxContainer/Tree_VBoxContainer/Tree" to="." method="_on_Tree_itemEdited"]
[connection signal="item_edited" from="HBoxContainer/Tree_VBoxContainer/Tree" to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_Tree_item_edited"]
[connection signal="item_rmb_selected" from="HBoxContainer/Tree_VBoxContainer/Tree" to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_Tree_item_rmb_selected"]
[connection signal="item_selected" from="HBoxContainer/Tree_VBoxContainer/Tree" to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_Tree_item_selected"]
[connection signal="mouse_entered" from="HBoxContainer/Tree_VBoxContainer/Tree" to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_Tree_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Tree_VBoxContainer/Tree" to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_Tree_mouse_exited"]
[connection signal="nothing_selected" from="HBoxContainer/Tree_VBoxContainer/Tree" to="HBoxContainer/Tree_VBoxContainer/Tree" method="_on_Tree_nothing_selected"]
[connection signal="requestToCreateRelationship" from="HBoxContainer/Tree_VBoxContainer/Tree" to="." method="_on_Tree_requestToCreateRelationship"]
[connection signal="rootItem" from="HBoxContainer/Tree_VBoxContainer/Tree" to="." method="_on_Tree_rootItem"]
[connection signal="selectionChanged" from="HBoxContainer/Tree_VBoxContainer/Tree" to="." method="_on_Tree_selectionChanged"]
[connection signal="pressed" from="HBoxContainer/Information_VBoxContainer/HBoxContainer/save_Button" to="." method="_on_save_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Information_VBoxContainer/HBoxContainer/load_Button" to="." method="_on_load_Button_pressed"]
[connection signal="textChanged" from="HBoxContainer/Information_VBoxContainer/selectionDesc_TextEdit" to="." method="_on_selectionDesc_TextEdit_textChanged"]
[connection signal="text_changed" from="HBoxContainer/Information_VBoxContainer/selectionDesc_TextEdit" to="HBoxContainer/Information_VBoxContainer/selectionDesc_TextEdit" method="_on_selectionDesc_TextEdit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer/category_LineEdit" to="." method="_on_category_LineEdit_text_changed"]
[connection signal="text_entered" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer/category_LineEdit" to="." method="_on_category_LineEdit_text_entered"]
[connection signal="pressed" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer/createCategory_Button" to="." method="_on_createCategory_Button_pressed"]
[connection signal="deleteCat" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer/Category_ItemList" to="." method="_on_Category_ItemList_deleteCat"]
[connection signal="item_rmb_selected" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer/Category_ItemList" to="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer/Category_ItemList" method="_on_Category_ItemList_item_rmb_selected"]
[connection signal="item_selected" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer/Category_ItemList" to="." method="_on_Category_ItemList_item_selected"]
[connection signal="changeTree" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2/Rels_ItemList" to="." method="_on_Rels_ItemList_changeTree"]
[connection signal="deleteRel" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2/Rels_ItemList" to="." method="_on_Rels_ItemList_deleteRel"]
[connection signal="item_activated" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2/Rels_ItemList" to="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2/Rels_ItemList" method="_on_Rels_ItemList_item_activated"]
[connection signal="item_rmb_selected" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2/Rels_ItemList" to="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2/Rels_ItemList" method="_on_Rels_ItemList_item_rmb_selected"]
[connection signal="item_selected" from="HBoxContainer/Rels_VBoxContainer/HBoxContainer2/VBoxContainer2/Rels_ItemList" to="." method="_on_Rels_ItemList_item_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="loadDialog" to="." method="_on_loadDialog_file_selected"]
